--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "slow-numbers",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "[Demo page](https://sash-ok.github.io/slowNumbers/)",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "develop": "parcel index.html",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -17,7 +20,5 @@
     "url": "https://github.com/Sash-OK/slowNumbers/issues"
   },
   "homepage": "https://github.com/Sash-OK/slowNumbers#readme",
-  "dependencies": {
-    "jquery": "^1.12.4"
-  }
+  "dependencies": {}
 }
